fixed spacing between student img and their information

--- a/client/CSS/Home.css
+++ b/client/CSS/Home.css
@@ -1,4 +1,5 @@
 h1{
     display: flex;
     justify-content: space-evenly;
+    font-size: 3em;
 }
