--- a/client/CSS/StudentMessage.css
+++ b/client/CSS/StudentMessage.css
@@ -1,22 +1,28 @@
 .Message_Container{
     display: flex;
-    justify-content: space-evenly;
 }
 
 .image {
-    display: flex 1;
-    padding: 2.8em;
-    width: 50%;
-    height: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 2em;
+    width: 60%;
+    height: 60%;
 }
 
 .image img{
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    height: 70%;
+    border-radius: 30px;
     object-fit: cover; 
 }
 
 .classmates{
     display: flex 1;
     justify-content: space-evenly;
+    margin: 1em;
+}
+
+.description{
+    font-size: 2.2em;
 }
